# zellij-summon

./: CLAUDE.md  Cargo.toml  flake.nix  test-config.kdl  test-layout.kdl  test-plugin.sh
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/: README.md  nix-integration.md
example-layouts/: basic.kdl  full.kdl
nix/: default.nix
src/: main.rs
