[package]
name = "zellij-pane-manager"
version = "0.1.0"
edition = "2021"
description = "Headless Zellij plugin for keybind-driven floating pane management"
license = "MIT"
repository = "https://github.com/manuel2258/zellij-summon"
autobins = false

[[bin]]
name = "zellij-pane-manager"
path = "src/main.rs"

[dependencies]
zellij-tile = "0.44"

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
